5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1637_2711.log
== TEST (2019-04-09 11:19:01) 
-- CODE:
a = float(input("valor: "))
b = int(input("quantidade de tickets do RU: "))
c = float(input("valor dos tickets: "))
d = int(input("quantidade de passes de onibus: "))
e = float(input("valor dos passes: "))

print(a+b+c+d+e)
-- OUTPUT:
447.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:24:33) 
-- CODE:
a = float(input("valor: "))
b = int(input("quantidade de tickets do RU: "))
c = float(input("valor dos tickets: "))
d = int(input("quantidade de passes de onibus: "))
e = float(input("valor dos passes: "))

if (a >((b*c) + (d*e)))
	msg = SUFICIENTE
else:
	msg = INSUFICIENTE
	
print(msg)
-- ERROR:
File "XXXX", line 7
    if (a >((b*c) + (d*e)))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:24:41) 
-- CODE:
a = float(input("valor: "))
b = int(input("quantidade de tickets do RU: "))
c = float(input("valor dos tickets: "))
d = int(input("quantidade de passes de onibus: "))
e = float(input("valor dos passes: "))

if (a >((b*c) + (d*e))):
	msg = SUFICIENTE
else:
	msg = INSUFICIENTE
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    msg = SUFICIENTE
NameError: name 'SUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:25:59) 
-- CODE:
a = float(input("valor: "))
b = int(input("quantidade de tickets do RU: "))
c = float(input("valor dos tickets: "))
d = int(input("quantidade de passes de onibus: "))
e = float(input("valor dos passes: "))

if (a >((b*c) + (d*e))):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
	
print(msg)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:26:37) 
-- CODE:
a = float(input("valor: "))
b = int(input("quantidade de tickets do RU: "))
c = float(input("valor dos tickets: "))
d = int(input("quantidade de passes de onibus: "))
e = float(input("valor dos passes: "))

if (a >((b*c) + (d*e))):
	msg = "SUFICIENTE"
else:
	msg = "INSUFICIENTE"
	
print(msg)
-- EXECUTION TIME:
0.144496
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
